# hfs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PYPI_IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  RELEASING.md  ROADMAP.md  ROADMAP_STATUS.md  TESTING_PYPI.md  audit.toml  codecov.yml  release.toml  roadmap.xml  todo.txt
.github/workflows/: cd-native.yml  cd.yml  ci-extended.yml  ci.yml  claude-code-review.yml  docker.yml  inferno.yml  py-cd.yml  py-ci.yml  setup-runner.yml  test.yml  testdoc.yml  testtwine.yml
benchmark_results/: comparison_20251118_205241.txt  main_20251118_205241.txt  refactor_20251118_205241.txt
crates/fhir/: Cargo.toml  build.rs
crates/fhir-gen/: Cargo.toml  README.md  build.rs
crates/fhir-macro/: Cargo.toml
crates/fhirpath/: Cargo.toml  README.md
crates/fhirpath-support/: Cargo.toml
crates/hfs/: Cargo.toml  README.md  build.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/docs/: design_discussion_28.md  s3_backend_plan.md
crates/persistence/src/: error.rs  lib.rs
crates/persistence/src/advisor/: analysis.rs  handlers.rs  main.rs  mod.rs  server.rs  suggestions.rs
crates/persistence/src/backends/: mod.rs
crates/persistence/src/backends/elasticsearch/: backend.rs  mod.rs  schema.rs  search_impl.rs  storage.rs
crates/persistence/src/backends/elasticsearch/search/: fts.rs  mod.rs  modifier_handlers.rs  query_builder.rs
crates/persistence/src/backends/elasticsearch/search/parameter_handlers/: composite.rs  date.rs  mod.rs  number.rs  quantity.rs  reference.rs  string.rs  token.rs  uri.rs
crates/persistence/src/backends/postgres/: backend.rs  bulk_export.rs  bulk_submit.rs  mod.rs  schema.rs  search_impl.rs  storage.rs  transaction.rs
crates/persistence/src/backends/postgres/search/: mod.rs  query_builder.rs  writer.rs
crates/persistence/src/backends/s3/: backend.rs  bulk_export.rs  bulk_submit.rs  bundle.rs  client.rs  config.rs  keyspace.rs  mod.rs  models.rs  storage.rs  tests.rs  versioned.rs
crates/persistence/src/backends/s3/docs/: README.md  discussion_roadmap.md
crates/persistence/src/backends/sqlite/: backend.rs  bulk_export.rs  bulk_submit.rs  mod.rs  schema.rs  search.rs  search_impl.rs  storage.rs  transaction.rs
crates/persistence/src/backends/sqlite/search/: chain_builder.rs  filter_parser.rs  fts.rs  mod.rs  modifier_handlers.rs  query_builder.rs  strategy.rs  writer.rs
crates/persistence/src/backends/sqlite/search/parameter_handlers/: composite.rs  date.rs  mod.rs  number.rs  quantity.rs  reference.rs  string.rs  token.rs  uri.rs
crates/persistence/src/composite/: analyzer.rs  config.rs  cost.rs  health.rs  merger.rs  mod.rs  router.rs  storage.rs  sync.rs
crates/persistence/src/core/: backend.rs  bulk_export.rs  bulk_submit.rs  capabilities.rs  history.rs  mod.rs  search.rs  storage.rs  transaction.rs  versioned.rs
crates/persistence/src/search/: converters.rs  errors.rs  extractor.rs  loader.rs  mod.rs  registry.rs  reindex.rs  writer.rs
crates/persistence/src/strategy/: database_per_tenant.rs  mod.rs  schema_per_tenant.rs  shared_schema.rs
crates/persistence/src/tenant/: context.rs  id.rs  mod.rs  permissions.rs  tenancy.rs
crates/persistence/src/types/: mod.rs  pagination.rs  search_capabilities.rs  search_params.rs  stored_resource.rs
crates/persistence/tests/: composite_polyglot_tests.rs  composite_routing_tests.rs  elasticsearch_tests.rs  postgres_tests.rs  s3_minio_smoke_tests.rs  s3_versioned_tests.rs  sqlite_tests.rs
crates/persistence/tests/common/: assertions.rs  capabilities.rs  fixtures.rs  harness.rs  minio.rs  mod.rs
crates/persistence/tests/composite/: mod.rs  polyglot_tests.rs  routing_tests.rs
crates/persistence/tests/crud/: conditional_tests.rs  create_tests.rs  delete_tests.rs  mod.rs  read_tests.rs  update_tests.rs
crates/persistence/tests/fixtures/: observations.json  organizations.json  patients.json
crates/persistence/tests/multitenancy/: cross_tenant_tests.rs  isolation_tests.rs  mod.rs
crates/persistence/tests/search/: chained_tests.rs  date_tests.rs  include_tests.rs  mod.rs  modifier_tests.rs  number_tests.rs  pagination_tests.rs  quantity_tests.rs  reference_tests.rs  string_tests.rs  token_tests.rs
crates/persistence/tests/transactions/: basic_tests.rs  bundle_tests.rs  mod.rs  rollback_tests.rs
crates/persistence/tests/versioning/: history_tests.rs  mod.rs  optimistic_locking_tests.rs  vread_tests.rs
crates/pysof/: Cargo.toml  PYPI_CHECKLIST.md  README.md  VERSION_MANAGEMENT.md  pyproject.toml  (+2 more)
crates/rest/: Cargo.toml  README.md
crates/rest/src/: config.rs  error.rs  fhir_types.rs  lib.rs  state.rs
crates/rest/src/extractors/: fhir_resource.rs  fhir_version.rs  mod.rs  pagination.rs  search_params.rs  search_query_builder.rs  tenant.rs
crates/rest/src/handlers/: batch.rs  capabilities.rs  compartment.rs  create.rs  delete.rs  health.rs  history.rs  mod.rs  patch.rs  read.rs  search.rs  update.rs  versions.rs  vread.rs
crates/rest/src/middleware/: conditional.rs  content_type.rs  mod.rs  prefer.rs  tenant.rs  tenant_prefix.rs
crates/rest/src/responses/: bundle.rs  format.rs  headers.rs  mod.rs  operation_outcome.rs  subsetting.rs
crates/rest/src/routing/: fhir_routes.rs  mod.rs
crates/rest/src/tenant/: mod.rs  resolver.rs  source.rs  validation.rs
crates/rest/tests/: rest_conformance.rs  search_integration.rs  tenant_resolution.rs  xml_conformance.rs
crates/rest/tests/common/: assertions.rs  backend_config.rs  fixtures.rs  harness.rs  mod.rs  spec_loader.rs
crates/rest/tests/specs/crud/: create.json  delete.json  read.json  update.json
crates/serde/: Cargo.toml  README.md
crates/serde-support/: Cargo.toml
crates/serde-support/src/: lib.rs
crates/serde/src/: error.rs  json.rs  lib.rs
crates/serde/src/xml/: de.rs  mod.rs  ser.rs  utils.rs
crates/serde/tests/: test_examples.rs  test_json_serde.rs  test_xml_fhir_serde.rs  test_xml_serde.rs
data/: search-parameters-r6.json
specs/: persistence.md  rest.md  search.md  searchparameter-configuration.md
utils/: benchmark_serde.sh
(+4525 files in other folders)
