[package]
name = "helios-serde-support"
version = "0.1.32"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lschmierer/helios-fhir-server"
description = "Shared serde helpers for FHIR serialization/deserialization"

[features]
xml = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
